adicionado efeito hover Efeito adicionado no titulo de cada bicicleta dentro da pagina de bicicletas

--- a/css/paginas/bicicletas.css
+++ b/css/paginas/bicicletas.css
@@ -19,12 +19,12 @@
 }
 
 .valor {
-  font: 500 1.25rem/24px 'Roboto', Sans-Serif;
+  font: 500 1.25rem/24px "Roboto", Sans-Serif;
   position: relative;
 }
 
 .nimbus-valor::after {
-  content: 'R$ 4999';
+  content: "R$ 4999";
   display: block;
   background-color: var(--cor-c12);
   color: var(--cor-c1);
@@ -37,7 +37,7 @@
 }
 
 .nebula-valor::after {
-  content: 'R$ 3999';
+  content: "R$ 3999";
   display: block;
   background-color: var(--cor-c12);
   color: var(--cor-c1);
@@ -50,7 +50,7 @@
 }
 
 .magic-valor::after {
-  content: 'R$ 2499';
+  content: "R$ 2499";
   display: block;
   background-color: var(--cor-c12);
   color: var(--cor-c1);
@@ -63,21 +63,26 @@
 }
 
 .bicicletas-ct h2 {
-  font: 600 2.25rem/40px 'Poppins', Sans-Serif;
+  font: 600 2.25rem/40px "Poppins", Sans-Serif;
   grid-column: 1 / -1;
 }
 
-.bicicletas-ct h2:before {
-  content: '';
+.bicicletas-ct h2::before {
+  content: "";
   display: block;
   width: 12px;
   height: 8px;
   margin-bottom: 8px;
   background-color: var(--cor-p1);
+  transition: .3s;
+}
+
+.bicicleta-bg:hover .bicicletas-ct h2::before {
+  width: 18px;
 }
 
 .bicicletas-ct p {
-  font: 400 1.25rem/24px 'Roboto', Sans-Serif;
+  font: 400 1.25rem/24px "Roboto", Sans-Serif;
   color: var(--cor-c8);
   grid-column: 1 / -1;
   margin-top: 20px;
@@ -87,7 +92,7 @@
 
 .bicicletas-ct ul {
   display: grid;
-  font: 500 1.25rem/20px 'Poppins', Sans-Serif;
+  font: 500 1.25rem/20px "Poppins", Sans-Serif;
   color: var(--cor-c8);
   margin-bottom: 15px;
   gap: 10px;
@@ -120,60 +125,59 @@
 }
 
 .bicicletas-infos li:nth-child(1)::before {
-  content: '';
+  content: "";
   display: inline-block;
   width: 24px;
   height: 24px;
-  background: url('../../img/icones/eletrica.svg') no-repeat center;
+  background: url("../../img/icones/eletrica.svg") no-repeat center;
   margin-right: 8px;
   vertical-align: middle;
   background-size: contain;
 }
 
 .bicicletas-infos li:nth-child(2)::before {
-  content: '';
+  content: "";
   display: inline-block;
   width: 24px;
   height: 24px;
-  background: url('../../img/icones/carbono.svg') no-repeat center;
+  background: url("../../img/icones/carbono.svg") no-repeat center;
   margin-right: 8px;
   vertical-align: middle;
   background-size: contain;
 }
 
 .bicicletas-infos li:nth-child(3)::before {
-  content: '';
+  content: "";
   display: inline-block;
   width: 24px;
   height: 24px;
-  background: url('../../img/icones/velocidade.svg') no-repeat center;
+  background: url("../../img/icones/velocidade.svg") no-repeat center;
   margin-right: 8px;
   vertical-align: middle;
   background-size: contain;
 }
 
 .bicicletas-infos li:nth-child(4)::before {
-  content: '';
+  content: "";
   display: inline-block;
   width: 24px;
   height: 24px;
-  background: url('../../img/icones/rastreador.svg') no-repeat center;
+  background: url("../../img/icones/rastreador.svg") no-repeat center;
   margin-right: 8px;
   vertical-align: middle;
   background-size: contain;
 }
 
 .bicicletas-infos a:after {
-  content: '';
+  content: "";
   display: inline-block;
   width: 18px;
   height: 10px;
-  background: url('../../img/icones/seta.svg') no-repeat center;
+  background: url("../../img/icones/seta.svg") no-repeat center;
   margin-left: 16px;
   vertical-align: middle;
   background-size: contain;
 }
-
 
 @media (max-width: 1200px) {
   .bicicletas-ct img {
